--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- REACT-VIS -->
+    <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
+    <script defer type="text/javascript" src="https://unpkg.com/react-vis/dist/dist.min.js"></script>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
     <title>EOG React Visualization Assessment</title>
