--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
-    <title>EOG React Visualization Assessment</title>
+    <title>M.H React Visualization Assessment</title>
   </head>
   <body>
     <noscript>
